# ChaosDanmuTool

./: .gitignore  .prettierignore  .taurignore  COPYING  Cargo.toml  ChaosDanmuTool.fig  Makefile.toml  beforeBuild.sh  buildLinux.sh  buildMacOS.sh  buildWindows.bat  buildWindows.sh  changeLog.json  changeLog.md  config.forge.js  currentChangeLog.md  getLastChangeLog.js  index.html  package.json  plan.md  publishSteps.md  setupLinux.sh  setupWindows.bat  svelte.config.js  tsconfig.json  vite.config.ts  webpack.main.config.js  webpack.plugins.js  webpack.renderer.config.js  webpack.rules.js
backend/: Cargo.toml  build.rs  tauri.conf.json
backend/icons/: icon.icns
backend/src/: app.rs  app_context.rs  command.rs  config.rs  lib.rs  network.rs  utils.rs
backend/src/app/: app_loop.rs  config_manager.rs  event.rs
backend/src/app/internal_api/: cache.rs  config_manager.rs  danmu_receiver.rs  window.rs
backend/src/cache/: user_info_cache.rs
backend/src/cache/sql/: create_tables.sql  medal_data_ins_rep.sql  medal_data_sel.sql  medal_info_ins_rep.sql  medal_info_sel.sql  user_info_ins_rep.sql
backend/src/cache/user_info_cache/: medal_data.rs  medal_info.rs  uic_db_connection.rs  user_info.rs
backend/src/command/: command_history_manager.rs  command_packet.rs
backend/src/command/command_packet/: app_command.rs  bilibili_command.rs
backend/src/config/: backend_config.rs  config.rs  config_manager.rs  frontend_config.rs
backend/src/config/backend_config/: config_manager_config.rs  danmu_receiver_config.rs  http_server_config.rs  updater_config.rs  window_config.rs
backend/src/config/config/: backend_config.rs  frontend_config.rs
backend/src/config/frontend_config/: main_view_config.rs  viewer_view_config.rs
backend/src/network/: command_broadcast_server.rs  danmu_receiver.rs  http_server.rs  websocket_connection.rs
backend/src/network/api_request/: danmu_server_info_getter.rs  gift_config_getter.rs  room_info_getter.rs
backend/src/network/danmu_receiver/: danmu_receiver.rs  message_processor.rs  packet.rs  packet_processor.rs
backend/src/network/websocket/: websocket_connection.rs  websocket_connection_reusable.rs
backend/src/types/: bilibili.rs
backend/src/types/bilibili/: emoji_data.rs  emot.rs
backend/src/utils/: bytes_utils.rs  db_utils.rs  debug_utils.rs  mutex_utils.rs  panic_utils.rs  process_utils.rs  trace_utils.rs  url_utils.rs  window_utils.rs
backend/src/utils/process_utils/: macos.rs
backend/src/utils/window_utils/: macos.rs
client/: Cargo.toml  tauri.conf.json
client/icons/: icon.icns
client/src/: api_client.rs  client.rs  lib.rs  main.rs  run.rs  secret_key.rs
client/src/api_client/: api_client_config.rs
client/src/client/: client_config.rs
client/src/run/: init.rs
client_ui/: Cargo.toml  index.html
client_ui/src/: app.rs  main.rs
client_ui/styles/: index.scss
server/: Cargo.toml
server/src/: bili_api.rs  database.rs  key.rs  main.rs  run.rs  server.rs
server/src/bili_api/: client.rs  response_error.rs
server/src/bili_api/client/: api_app_batch_heartbeat.rs  api_app_end.rs  api_app_heartbeat.rs  api_app_start.rs  config.rs
server/src/bili_api/response_error/: ret_code.rs
server/src/bili_api/utils/: signature.rs
server/src/database/: data_model.rs
server/src/database/data_model/: auth_key_info.rs  data_primitives.rs  session_info.rs
server/src/run/: init.rs
server/src/server/: api.rs  config.rs  feature_config.rs  handler.rs  heartbeat_task.rs  signed_body.rs
server/src/server/api/: admin.rs  danmu.rs
server/src/server/handler/: admin_key_register.rs  danmu_end.rs  danmu_heartbeat.rs  danmu_start.rs  fallback.rs  status_reload.rs  status_version.rs
server/src/server/signed_body/: user_type.rs
share/: Cargo.toml
share/src/: command_packet.rs  config.rs  data_primitives.rs  js.rs  lib.rs  server_api.rs  types.rs  utils.rs
share/src/bili_api/: data_type.rs
share/src/bili_api/data_type/: api.rs
share/src/command_packet/: app_command.rs  bilibili_command.rs
share/src/command_packet/app_command/: bilibili_packet_parse_error.rs  config_update.rs  gift_config_update.rs  receiver_status_update.rs  user_info_update.rs  viewer_status_update.rs
share/src/command_packet/bilibili_command/: activity_update.rs  danmu_message.rs  gift_message.rs
share/src/config/: backend_config.rs  frontend_config.rs
share/src/config/backend_config/: config_manager_config.rs  (+4 more)
share/src/data_primitives/: auth_body.rs  auth_code.rs  auth_key_id.rs  auth_key_note.rs  auth_signature.rs  game_id.rs  open_id.rs  public_key.rs  room_id.rs  user_face.rs  user_name.rs  version.rs  wss_link.rs
share/src/data_type/: api.rs
share/src/server_api/: admin.rs  danmu.rs  request_signature.rs  request_signed.rs  status.rs
share/src/types/: bilibili.rs  user_info.rs
share/src/utils/: axum.rs  base64.rs  brotli_utils.rs  env.rs  functional.rs  hash.rs  hex.rs  reqwest.rs
src/: App.tsx  (+8 more)
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  app_context.rs  cache.rs  command.rs  config.rs  lib.rs  libs.rs  main.rs  network.rs  types.rs  utils.rs
src-tauri/src/app/: app_loop.rs  event.rs  internal_api.rs
src-tauri/src/cache/: user_info_cache.rs
src-tauri/src/command/: command_history_manager.rs  command_packet.rs
src-tauri/src/config/: config.rs  config_manager.rs
src-tauri/src/libs/: app.rs  app_context.rs  cache.rs  command.rs  config.rs  network.rs  receiver.rs  types.rs  utils.rs
src-tauri/src/network/: api_request.rs  command_broadcast_server.rs  danmu_receiver.rs  http_server.rs  websocket.rs
src-tauri/src/types/: bilibili.rs
src-tauri/src/utils/: async_utils.rs  brotli_utils.rs  console_utils.rs  db_utils.rs  debug_utils.rs  dialog_utils.rs  fs_utils.rs  gen_utils.rs  immutable_utils.rs  mut_bytes_utils.rs  mutex_utils.rs  panic_utils.rs  process_utils.rs  trace_utils.rs  window_utils.rs  ws_utils.rs
src-tauri/static_object/: Cargo.toml
src-tauri/static_object/src/: lib.rs
src-tauri/static_object/static_object_derive/: Cargo.toml
(+994 files in other folders)
