[workspace]
resolver = "2"
members = ["client", "client_ui", "server", "share"]

[workspace.dependencies]
share = { path = "share" }

tracing = "0.1"
thiserror = "1"
anyhow = "1"

tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-loki = "0.2"
dotenv = "0.15"
argh = "0.1"

futures = "0.3"
tokio = { version = "1", features = ["full"] }

url = "2"
http = "1"
tower-http = { version = "0.5", features = ["compression-full", "trace"] }
tower = "0.4"
reqwest = { version = "0.11", features = [
    "json",
    "rustls-tls",
    "gzip",
    "brotli",
    "deflate",
] }
axum = { version = "0.7", features = ["http2", "macros"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-aux = "4"
serde_bytes = "0.11"
serde_with = "3"
bson = { version = "2", features = ["chrono-0_4"] }
toml = "0.8"

md-5 = "0.10"
base16ct = "0.2"
base64ct = { version = "1", features = ["std"] }
hmac = "0.12"
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }

chrono = "0.4"
rand = "0.8"
itertools = "0.12"
bytes = "1"
typed-builder = "0.18"
dashmap = "5"
once_cell = "1"
semver = "1"
