[package]
name = "client"
version = "0.10.0"
authors = ["Golden_Water"]
license = "AGPL-3.0-only"
repository = "https://github.com/BillGoldenWater/ChaosDanmuTool.git"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.9", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.11", features = [] }

tracing = "0.1"
thiserror = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
