[package]
name = "client"
version = "0.10.0"
authors = ["Golden_Water"]
license = "AGPL-3.0-only"
repository = "https://github.com/BillGoldenWater/ChaosDanmuTool.git"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.9", features = [] }

[dependencies]
share.workspace = true

tauri = { version = "2.0.0-beta.11", features = [] }

tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true

tracing-subscriber.workspace = true
dotenv.workspace = true

tokio.workspace = true

reqwest.workspace = true

serde.workspace = true
serde_json.workspace = true
bson.workspace = true

ed25519-dalek.workspace = true

rand.workspace = true
typed-builder.workspace = true
