[package]
name = "client_ui"
version = "0.10.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.6", features = ["csr"] }

tracing = "0.1"
thiserror = "1.0"

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
