[package]
name = "client_ui"
version = "0.10.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.6", features = ["csr"] }

tracing.workspace = true
thiserror.workspace = true

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

serde.workspace = true
serde-wasm-bindgen = "0.6"
