[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
thiserror = "1"

tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"

tokio = "1"
axum = { version = "0.7", features = ["http2", "macros"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
anyhow = "1"
