[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
share.workspace = true

tracing-subscriber.workspace = true
dotenv.workspace = true

tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true

tokio.workspace = true

http.workspace = true
reqwest.workspace = true
axum.workspace = true
mongodb = "2"

serde.workspace = true
serde_json.workspace = true
serde-aux.workspace = true
serde_bytes.workspace = true
bson.workspace = true

md-5.workspace = true
hmac.workspace = true
sha2.workspace = true
ed25519-dalek.workspace = true

chrono.workspace = true
rand.workspace = true
itertools.workspace = true
bytes.workspace = true
typed-builder.workspace = true
semver.workspace = true

[features]
bench = []
