[package]
name = "chaos_danmu_tool_share"
version = "0.10.0"
authors = ["Golden_Water"]
license = "AGPL-3.0-only"
edition = "2021"
rust-version = "1.57"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# region wasm
wasm-bindgen = "0.2.63"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
serde-wasm-bindgen = "0.5.0"
js-sys = "0.3.61"

## `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
## compared to the default allocator's ~10K. It is slower than the default
## allocator, however.
#wee_alloc = { version = "0.4.5" }
# endregion

type_exporter = { package = "type_exporter_macro", git = "https://github.com/BillGoldenWater/type_exporter.git" }
log = "0.4.17"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
once_cell = "1.17.1"
chrono = "0.4.23"
uuid = { version = "1.3.2", features = ["v4", "macro-diagnostics", "js", "fast-rng"], default-features = false }
thiserror = "1.0.38"
brotli = "3.3.4"
