[package]
name = "share"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing.workspace = true
thiserror.workspace = true

axum.workspace = true

serde.workspace = true
serde_bytes.workspace = true
serde_with.workspace = true
bson.workspace = true

md-5.workspace = true
base16ct.workspace = true
base64ct.workspace = true
ed25519-dalek.workspace = true

chrono.workspace = true
rand.workspace = true
itertools.workspace = true
dashmap.workspace = true
once_cell.workspace = true

[features]
bench = []
