[package]
name = "chaos_danmu_tool"
version = "0.10.0"
description = "A tool for process/view Danmu on bilibili"
authors = ["Golden_Water"]
license = "AGPL-3.0-only"
repository = "https://github.com/BiliGoldenWater/ChaosDanmuTool.git"
default-run = "chaos_danmu_tool"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }
embed-resource = "1.7.4"

#[target.'cfg(target_os = "windows")'.build-dependencies]
#embed-resource = "1.7.4"

[dependencies]
static_object = { git = "https://github.com/BiliGoldenWater/StaticObject.git" }
serde_json = "1.0.89"
serde = { version = "1.0.147", features = ["derive"] }
# live template: sddfc (serde default define & function - config)
#
# #[serde(default = "$fieldName$_default")]
# #[serde(skip_serializing_if = "$fieldName$_skip_if")]
# // region $fieldName$
# fn $fieldName$_default() -> $typeName$ {
#   $defaultValue$
# }
#
# fn $fieldName$_skip_if(value: &$typeName$) -> bool {
#   *value == $fieldName$_default() && *ALLOW_CONFIG_SKIP_IF.read().unwrap()
# }
# // endregion
#
# live template: seo (serde empty object)
# serde_json::from_str("{}").unwrap()
tauri = { version = "1.2.1", features = ["macos-private-api", "updater", "window-start-dragging"] }
window-vibrancy = "0.3.2"
window-shadows = "0.2.0"
raw-window-handle = "0.5.0"
futures-util = "0.3.25"
tokio = { version = "1.22.0", features = ["full"] }
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
hyper = { version = "0.14.23", features = ["http1", "http2", "server"] }
reqwest = { version = "0.11.13", features = ["blocking", "native-tls"] }
oneshot = "0.1.5"
bytes = "1.3.0"
brotli = "3.3.4"
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
lazy_static = "1.4.0"
rfd = { version = "0.10.0", features = ["common-controls-v6"] }
chrono = "0.4.23"
netstat2 = "0.9.1"
get-port = "4.0.0"
sysinfo = "0.27.0"
async-recursion = "1.0.0"
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "sqlite"] }
base64 = "0.13.1"
rand = "0.8.5"
backtrace = "0.3.66"
thiserror = "1.0.37"
log = { version = "0.4.17", features = ["max_level_debug", "release_max_level_debug"] }
fern = { version = "0.6.1", features = ["colored"] }
clap = { version = "4.0.26", features = ["derive"] }
os_type = "2.6.0"
toml = "0.5.10"
ts-rs = "6.2.1"
# live template: tss
# #[derive(serde::Serialize, serde::Deserialize, ts_rs::TS, PartialEq, Debug, Clone)]
# #[serde(rename_all = "camelCase")]
# #[ts(export, export_to = "../src/share/type/rust/$PATH$")]
# pub struct $NAME$ {
#   $END$
# }
#
# live template: atss
# #[derive(serde::Serialize, serde::Deserialize, ts_rs::TS, PartialEq, Debug, Clone)]
# #[serde(rename_all = "camelCase")]
# #[ts(export, export_to = "../src/share/type/rust/$PATH$")]

[target.'cfg(target_os = "windows")'.dependencies]
winapi = "0.3.9"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24.1"
objc = "0.2.7"
MacTypes-sys = "2.1.0"
libc = "0.2.137"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
#strip = true  # Automatically strip symbols from the binary.
incremental = true

[patch.crates-io]
tauri = { git = "https://github.com/BiliGoldenWater/tauri.git" }
tao = { git = "https://github.com/BiliGoldenWater/tao.git" }
